# doctornet-protocol

./: .gitignore  Package.swift  README.md
Sources/DoctorNetProtocol/: Common.swift  ReportPayload.swift  ScanPayload.swift  Version.swift
Tests/DoctorNetProtocolTests/: RoundTripTests.swift
python/: README.md  pyproject.toml
python/doctornet_protocol/: __init__.py  common.py  report.py  scan.py  version.py
python/tests/: test_roundtrip.py
